welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday=false) {
                   ^sleepIn:5: error: reassignment to val
	else if (vacation=true) {
                         ^sleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (vacation=true) {
             ^